# pyframe

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE.spdx  LICENSE_MIT  Makefile  README.md  main.py  nicegui.txt  pyproject.toml  release.yml
.github/: check_version.py
.github/workflows/: auto-format.yml  lint-pr.yml  rust-CI.yml
crates/assets/: drag.js  initialize_script.js  nicegui.txt  py.js
crates/icon_creator/: Cargo.toml
crates/icon_creator/src/: lib.rs
crates/pyframe_macros/: Cargo.toml
crates/pyframe_macros/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: assets.rs  event_handler.rs  hylper.rs  init_js.rs  lib.rs  utils.rs
crates/runtime/src/api/: audio.rs  comand_handel.rs  dialog.rs  extra.rs  fs.rs  geolocation.rs  http.rs  mod.rs  monitor.rs  notifications.rs  os.rs  process.rs  resource.rs  shortcut.rs  webview.rs  window.rs  window_extra.rs
crates/runtime/src/api_manager/: mod.rs  thread_pool.rs
crates/runtime/src/menu_manager/: mod.rs
crates/runtime/src/options/: menu.rs  mod.rs  webview.rs  window.rs
crates/runtime/src/resource_manager/: image_utils.rs  mod.rs  win_utils.rs
crates/runtime/src/shortcut_manager/: mod.rs
crates/runtime/src/tray_manager/: mod.rs
crates/runtime/src/window_manager/: builder.rs  mod.rs  protocol.rs  window.rs
docs/: convert_camel_to_snake.py  simple.rs
examples/: basic.py  nicegui.py
examples/resource/: index.html  main.js  styles.css
pyframe/: __init__.py  _pyframe.pyi  api.py  background_tasks.py  config.py  connection.py  core.py  helpers.py  outbox.py  runtime.py  utils.py
pyframe/app/: __init__.py  application.py  runtime.py
pyframe/configurationr/: menu.py  window.py
pyframe/executers/: __init__.py  executer.py  menu_executer.py  pyinvoker.py
pyframe/frame/: __init__.py  menu.py  window.py
pyframe/handler/: __init__.py  control_center.py  dialog.py  extra.py  monitor.py  notification.py  notify.py  resource.py  shortcut.py  webview.py  window.py  window_extra.py
pyframe/model/: models.py
resource/: index.html  main.js  styles.css
src/: lib.rs
