[package]
name = "pyframe"
version = "0.1.0"
edition = "2021"
authors = ["Ari Bermeki <ari.bermeki@icloud.com>"]
description = "A Super Fast Async Python Web-based GUI Framework with a Rust runtime."
keywords = ["web", "asyncio"]
readme = "README.md"
homepage = "https://github.com/YellowSiC/pyframe.git"
repository = "https://github.com/YellowSiC/pyframe.git"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/LICENSE",
    "/README.md",
    "/src",
    "/pyframe",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.pyd",
]

[lib]
name = "_pyframe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.25", features = ["anyhow", "extension-module", "generate-import-lib"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
runtime = { path = "crates/runtime" }
icon_creator = { path = "crates/icon_creator" }
anyhow = "1.0.98"
windows-sys = "0.59.0"
muda = "0.16.1"
tao = { version = "0.33.0", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"


[workspace]
members = [
	"crates/runtime",
	"crates/pyframe_macros",
	"crates/icon_creator", 
	
]
resolver = "2"  



[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
strip = "debuginfo"




