[project]
name = "pyframe"
description = "A Super Fast Async Python Web-based GUI Framework with a Rust runtime."
authors = [{ name = "Ari Bermeki", email = "ari.bermeki@icloud.com" }]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 1 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Web Technology",
  "Framework :: PyFrame",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: Web/GUI",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust"
]

dynamic = [
  "description",
  "keywords",
  "license",
  "readme",
  "version",
]

dependencies = [
  "typing-extensions>=4.13.2",
  "watchdog >=4.0.1",
  "multiprocess >=0.70.14",
  "nestd == 0.3.1",
  "inquirerpy == 0.3.4",
  "pydantic==2.11.5",
  "pydantic-core==2.33.2",
  "rustimport >=1.3.4",
  "orjson >=3.9.15",
  "uvloop; sys_platform != 'win32' and platform_python_implementation == 'CPython' and platform_machine != 'armv7l'",
  "python-socketio==5.13.0",
  "uvicorn[standard]==0.34.2",
  "fastapi==0.115.12",
  "wait_for2==0.3.2"
]

[tool.maturin]
name = "pyframe._pyframe"
authors = ["Ari Bermeki <ari.bermeki@icloud.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/YellowSiC/pyframe"
features = ["pyo3/extension-module"]

[dependency-groups]
lint = [
  "ruff~=0.11",
]
test = [
  "httpx~=0.28",
  "pytest~=8.3",
  "pytest-asyncio~=0.26",
  "sniffio~=1.3",
  "websockets~=15.0",
]

all = [
  { include-group = "lint" },
  { include-group = "test" },
]

[build-system]
requires = ["maturin>=1.8.0,<2"]
build-backend = "maturin"



[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-ignore = ["ALL"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 19 }
isort = { combine-as-imports = true, lines-after-imports = 2, known-first-party = ["pyframe", "tests"] }
per-file-ignores = { "pyframe/_pyframe.pyi" = ["I001"], "tests/**" = ["B018", "S110", "S501"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false

