[package]
name = "runtime"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tao = { version = "0.33.0", features = ["serde"] }
wry = { version ="0.51.2", features = ["devtools"] }
tray-icon = "0.20.1"
muda = "0.16.1"
global-hotkey = "0.7.0"
fs_extra = "1.3.0"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
directories = "6.0.0"
mime_guess = "2.0.5"
base64 = "0.22.1"
glob = "0.3.2"
rfd = { version = "0.15.3", default-features = false, features = ["xdg-portal", "tokio"] }
regex = "1.11.1"
url = "2.5.4"
png = "0.17.16"
flate2 = "1.1.1"
pyframe_macros = { path = "../pyframe_macros" }
hex = "0.4.3"
sha2 = "0.10.9"
walkdir = "2.5.0"
image = "0.25.6"
notify = "8.0.0"
ureq = "3.0.11"
env_logger = "0.11.8"
log = "0.4.27"

opener = "0.8.1"
notify-rust = "4.11.7"
once_cell = "1.21.3"
sys-locale = "0.3.2"
os_info = "3.11.0"
native-tls = "0.2.14"
rodio = { version = "0.20.0", default-features = false, features = ["symphonia-all"] }






[build-dependencies]
winres = "0.1.12"
build-version = "0.1.1"
regex = "1.11.1"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
cocoa = "0.26.0"
objc2-app-kit = "0.3.1"
active-win-pos-rs = "0.9.0"
objc2-core-foundation = "0.3.1"


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "winuser"] }
windows = { version = "0.61.1", features = ["Win32_Foundation"] }


[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemServices",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Controls",
]